# src/controllers/userController.js
@@ -1,6 +1,7 @@
 const express = require('express');
 const router = express.Router();
 const userService = require('../services/userService');
+const authenticateToken = require('../middleware/auth');
 
 router.post('/register', async (req, res) => {
     try {
@@ -19,6 +20,30 @@ router.post('/login', async (req, res) =>{
         res.json({token});
     } catch (error) {
         res.status(400).json({ error: error.message});
+    }
+});
+
+router.put('/actualizar', authenticateToken, async (req, res) =>{
+    const {senhaAtual, novaSenha} = req.body;
+
+    if(!senhaAtual || !novaSenha){
+        return res.status(400).json({message: error.message});
+    }
+    try {
+        const user = await User.findByUserName(req.username);
+        if (!user) return res.status(404).json({message: error.message});
+
+        const validar = await bcrypt.compare(senhaAtual, user.password);
+        if (!validar) return res.status(400).json({message: error.message});
+
+        const hashedPassword = await bcrypt.hash(newPassword, 10);
+
+        user.password = hashedPassword
+        await user.save();
+
+        res.status(200).json({message: "senha atualizada com suceso"});
+    } catch (error) {
+        res.status(500).json({ error: error.message});
     }
 });
 
